--- a/MyWorkDashboard.Shared/Components/Header/TopMenu.razor
+++ b/MyWorkDashboard.Shared/Components/Header/TopMenu.razor
@@ -18,6 +18,8 @@
                 <Tooltip Placement="@Placement.Bottom" Title=@("新規タスク追加")>
                     <Button Type="@ButtonType.Primary" Icon="@IconType.Outline.Form" Shape="@ButtonShape.Round" OnClick="AddNewSchedule" Style="margin-left: 10px"></Button>
                 </Tooltip>
+
+                <ClipboardIcon/>
             }
             else
             {
@@ -25,6 +27,7 @@
             }
 
         </AntDesign.Col>
+
 
         <AntDesign.Col>
             @*ここにメニューボタンとかを出す*@
