--- a/MyWorkDashboard.Shared/Components/TaskEditer/TaskInputForm.razor
+++ b/MyWorkDashboard.Shared/Components/TaskEditer/TaskInputForm.razor
@@ -38,9 +38,9 @@
             </Tooltip>
         </Col>
         <Col>
-            <Popconfirm Placement="@Placement.Bottom" Title="削除してよろしいですか" OkText="削除する" CancelText="キャンセル" OnConfirm="OnDeleteButtonClick">
+            <Popconfirm Placement="@Placement.Bottom" Title="削除してよろしいですか" OkText="削除する" CancelText="キャンセル" OnConfirm="OnDeleteButtonClick" @ref="_deleteConfirm">
                 <Tooltip Placement="@Placement.Bottom" Title=@("タスク削除")>
-                    <Button Danger Type="@ButtonType.Primary" Shape="@ButtonShape.Round" Class="control-buttons" Icon="@IconType.Outline.Delete"></Button>
+                <Button Danger Type="@ButtonType.Primary" Shape="@ButtonShape.Round" Class="control-buttons" Icon="@IconType.Outline.Delete"></Button>
                 </Tooltip>
             </Popconfirm>
         </Col>
@@ -100,7 +100,7 @@
 {
 
     private bool _isEmpty => schedulingServive.SelectedDuty == null;
-    private bool _isBreakTime;
+    private Popconfirm _deleteConfirm;
 
     /// <summary>
     /// タイトル
@@ -217,9 +217,16 @@
 
     private async Task OnDeleteButtonClick()
     {
-        await schedulingServive.DeleteDutyAsync(schedulingServive.SelectedDuty.Id);
-        await schedulingServive.ChangeSelectedDutyAsync(null, this);
-        await messageService.Info("削除されました", 1);
+        try
+        {
+            await _deleteConfirm.Close();
+            await schedulingServive.DeleteDutyAsync(schedulingServive.SelectedDuty.Id);
+            await schedulingServive.ChangeSelectedDutyAsync(null, this);
+            await messageService.Info("削除されました", 1);
+        }
+        catch
+        {
+        }
     }
 
     private async Task OnBackButtonClick()
